--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<a href="index.html"><img src="images/logo.jpeg" class="logo" data-sticky-logo="images/logo.png" data-transparent-logo="images/logo.png" alt=""></a>
+					<a href="index.html"><img src="images/logo.jpeg" class="logo" data-sticky-logo="images/logo.jpeg" data-transparent-logo="images/logo.jpeg" alt=""></a>
 				</div>
 
 				
@@ -69,8 +69,8 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="banner-headline">
-					<h3>
-						<strong>Consultá en que mesa votás.</strong>
+					<h3 class="instrucciones">
+						<strong class="title">Consultá en que mesa votás.</strong>
 						<div class="covid-container">
 							<img class="covid" src="./images/covid1.jpeg" alt="">
 							<img class="covid" src="./images/covid2.jpeg" alt="">
@@ -119,16 +119,16 @@
 			<div class="col-md-12">
 				<ul class="intro-stats margin-top-45 hide-under-992px">
 					<li>
-						<strong class="counter"></strong>
-						<span></span>
+						<strong class="counter">34.107</strong>
+						<span>Socios Habilitados</span>
 					</li>
 					<li>
-						<strong class="counter"></strong>
-						<span></span>
+						<strong class="counter">6.253</strong>
+						<span>Mujeres</span>
 					</li>
 					<li>
-						<strong class="counter"></strong>
-						<span></span>
+						<strong class="counter">27.854</strong>
+						<span>Hombres</span>
 					</li>
 				</ul>
 			</div>
@@ -359,7 +359,7 @@
 						<div class="footer-rows-left">
 							<div class="footer-row">
 								<div class="footer-row-inner footer-logo">
-									<img src="images/logo.png" alt="">
+									<img src="images/logo.jpeg" alt="">
 								</div>
 							</div>
 						</div>
